Minor fix: feather icon vertical alignment
Update main.css for better vertical-alignment of feather icons with text.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,6 +57,8 @@ a {
   background-color: #777;
 }
 
+
+
 #page-nav {
   padding-left: 20px;
 }
@@ -453,4 +455,9 @@ footer a {
 
   padding: 4px;
 
+}
+
+
+svg.feather {
+  vertical-align: top;
 }
